--- a/01_Introduction-and-Context/1.3_Background-and-Challenges.md
+++ b/01_Introduction-and-Context/1.3_Background-and-Challenges.md
@@ -1,1 +1,27 @@
+# 1.3 Background and Challenges
+
+## 1.3.1 Context
+The CHR Brussels operates multiple clinical and administrative systems that support the entire patient journey:
+- **DXPlanning** initiates and schedules patient appointments;
+- **QBLOC** manages surgical operations and operating room schedules;
+- **OASIS+** consolidates, stores, and shares patient records.
+
+Currently, user identity and access management are handled manually by the IT department without a centralized IAM framework.  
+This fragmented approach exposes the hospital to significant **operational, confidentiality, and compliance risks**.
+
+## 1.3.2 Key Challenges
+| Challenge | Description | Impact |
+|------------|--------------|---------|
+| **Fragmented identity lifecycle** | User accounts are manually created or deleted with no automation. | Inconsistent access and orphan accounts. |
+| **Weak authentication** | No MFA or contextual control for clinical applications. | Risk of unauthorized access and data breaches. |
+| **Lack of visibility** | No centralized audit or access reporting. | Difficult to prove compliance to auditors. |
+| **Manual role assignment** | Permissions are assigned by individuals without governance. | Misaligned access and role inflation. |
+| **Privileged access risks** | Technical accounts are shared or uncontrolled. | High risk of misuse and lack of traceability. |
+
+## 1.3.3 Transformation Rationale
+The project seeks to:
+- Build a **centralized IAM ecosystem** linking HRIS, clinical apps, and eHealth APIs.
+- Align the hospital’s IT environment with **Zero Trust and EU compliance frameworks**.
+- Ensure full **traceability of patient-related operations** and user activities.
+- Reduce manual overhead and strengthen accountability.
 
