--- a/01_Introduction-and-Context/1.4_Regulatory-Context.md
+++ b/01_Introduction-and-Context/1.4_Regulatory-Context.md
@@ -1,1 +1,24 @@
+# 1.4 Regulatory Context
+
+## 1.4.1 Overview
+The CHR Brussels operates in a highly regulated healthcare environment.  
+This IAM initiative must comply with both **European and Belgian** legal frameworks governing information security, privacy, and healthcare data.
+
+## 1.4.2 Applicable Regulations and Standards
+
+| Framework | Key Requirements | Relevance to IAM |
+|------------|------------------|------------------|
+| **GDPR (EU Regulation 2016/679)** | Lawfulness, minimization, and accountability in processing personal data. | Access control, user consent management, audit trail. |
+| **NIS2 Directive (EU 2022/2555)** | Cyber resilience for essential entities, including hospitals. | IAM governance, privileged access control, incident reporting. |
+| **ISO 27001 & ISO 27002** | Information Security Management System (ISMS) best practices. | Controls A.9 (Access Management) and A.12 (Operations Security). |
+| **ISO 27799** | Health-specific data protection requirements. | Patient confidentiality, logging of medical data access. |
+| **eHealth Belgium Framework** | Digital identity verification, eID integration, Recip-e compliance. | Integration of strong authentication and consent validation. |
+
+## 1.4.3 Alignment with Compliance Controls
+The IAM solution will directly contribute to:
+- **GDPR Article 32:** Implementation of appropriate technical and organizational measures.
+- **NIS2 Article 21:** Adoption of risk management practices and access control policies.
+- **ISO 27001 Annex A.9:** Restricting access to information and systems.
+- **ISO 27799 Section 10:** Logging and monitoring access to patient information.
+- **eHealth requirements:** Use of the Belgian eID for secure authentication and consent management.
 
