--- a/01_Introduction-and-Context/1.5_Project-Assumptions.md
+++ b/01_Introduction-and-Context/1.5_Project-Assumptions.md
@@ -1,1 +1,26 @@
+# 1.5 Project Assumptions
+
+## 1.5.1 General Assumptions
+- HR systems (**ULIS** and **Foederis**) provide accurate, up-to-date employee data.
+- Clinical applications (**OASIS+**, **QBLOC**, **DXPlanning**) support API or HL7/FHIR integration.
+- The hospital’s IT infrastructure (network, AD, VPN) supports IAM components.
+- The eHealth Belgium APIs (eID, Recip-e, Consent) are accessible and stable.
+- Business and clinical stakeholders are available for workshops and UAT sessions.
+
+## 1.5.2 Technical Assumptions
+- IAM integrations will use secure protocols (HTTPS, SAML, SCIM, OIDC).
+- SailPoint and Okta will be deployed in a hybrid on-premise/cloud environment.
+- Wallix Bastion will manage both Linux and Windows privileged sessions.
+- Logs and audit trails will be centralized for security monitoring.
+- The IAM team will have access to sandbox environments for configuration and testing.
+
+## 1.5.3 Organizational Assumptions
+- Executive management validates the IAM roadmap and governance model.
+- HR and IT departments collaborate closely for identity lifecycle synchronization.
+- A dedicated IAM Business Analyst oversees the end-to-end process documentation.
+- End users will participate in MFA adoption and access certification campaigns.
+
+## 1.5.4 Risk-Based Assumptions
+If any of these assumptions fail (e.g., unstable API integration or incomplete HR data),  
+the IAM scope and timelines may be adjusted through a Change Control process.
 
