--- a/02_Kickoff-and-Governance/2.1 Kickoff meeting.md
+++ b/02_Kickoff-and-Governance/2.1 Kickoff meeting.md
@@ -1,1 +1,123 @@
+# 2.1 BRD Kick-off Meeting
+
+## Context
+This kick-off meeting is initiated by the **IT Security Department of CHR Brussels**, under the sponsorship of the **Chief Information Officer (CIO)**.  
+The hospital has mandated an external **consulting firm specialized in Identity and Access Management (IAM)** to support the design and implementation of its future IAM ecosystem.
+
+The goal of this collaboration is to secure day-to-day clinical operations along the **patient journey**, while aligning with European and Belgian healthcare compliance frameworks (GDPR, NIS2, ISO 27001, ISO 27799, eHealth Belgium).  
+
+Currently, CHR Brussels does not operate a centralized IAM capability. User access to critical systems such as **DXPlanning** (patient scheduling), **QBLOC** (surgery block management), and **OASIS+** (electronic medical record) is managed manually.  
+This fragmented approach generates major operational and security risks:
+- Inconsistent onboarding and offboarding,
+- Lack of authentication control,
+- Limited audit and traceability,
+- Non-compliance with data protection standards.
+
+To address these issues, the CIO has established an **IAM Core Team**, composed of external IAM consultants from the selected consulting firm.  
+This multidisciplinary team combines business, architectural, and technical expertise to deliver the first structured phase of the project, the **Business Requirements Document (BRD) v0.1**.
+
+---
+
+## IAM Core Team Composition
+| Role | Profile | Scope of Work |
+|------|----------|---------------|
+| **IAM Business Analyst** | External consultant (IAM / GRC) | Capture business needs, identify operational risks, translate them into IAM requirements, and structure BRD v0.1. Focus on key hospital processes: appointment scheduling, admission, surgery planning, e-prescription, and data access. |
+| **IAM Architect** | External consultant (Senior IAM Solution Design) | Define the target IAM capabilities and integration patterns across the three IAM layers: IGA, IDP, PAM. Ensure alignment between business requirements, security controls, and Zero Trust principles. |
+| **Solution Architect / Technical Lead** | External consultant (Infrastructure & Integration Specialist) | Validate technical feasibility, define integration mechanisms (APIs, SAML/OIDC, SCIM, HL7), and document system dependencies. Ensure compatibility between IAM components and the hospital IT ecosystem. |
+
+The **objective of this meeting** is to align all stakeholders and formally initiate the **requirements phase** for drafting the **Business Requirements Document (BRD) v0.1** — which will define the functional, technical, and compliance foundations of the IAM transformation.
+
+---
+
+## Rationale for the IAM Solution Stack
+The consulting team conducted a pre-study to evaluate several IAM vendors and selected the following combination for their maturity, interoperability, and healthcare compliance capabilities:
+
+- **SailPoint (IGA)**  
+  Provides a robust Identity Governance and Administration layer for automated provisioning, deprovisioning, and role-based access control.  
+  SailPoint’s native connectors and governance capabilities make it ideal for HR-driven environments like hospitals, where user lifecycle changes (new hires, rotations, contract ends) are frequent and need to be auditable.
+
+- **Okta (IDP)**  
+  Serves as the central authentication layer for Single Sign-On (SSO) and Multi-Factor Authentication (MFA).  
+  Okta’s adaptive access policies and integration with modern protocols (SAML, OIDC) align perfectly with the hospital’s need for secure, seamless access across DXPlanning, QBLOC, and OASIS+.  
+  It ensures fast yet secure authentication, essential in clinical contexts where staff mobility and rapid access are critical.
+
+- **Wallix (PAM)**  
+  Selected as the Privileged Access Management solution due to its European origin, strong compliance alignment (NIS2, ISO 27001), and proven reliability in healthcare and public sectors.  
+  Wallix provides session recording, vaulted credential management, and full accountability for administrative operations — ensuring auditability and sovereignty over privileged access.
+
+Together, these three solutions form a **Zero Trust IAM framework** that enforces:
+- Continuous verification of user identity,
+- Least privilege access model,
+- Strong authentication and monitoring,
+- Full traceability of user and admin activities.
+
+---
+
+## Purpose of the Meeting
+The purpose of this session is to:
+- Officially launch the **IAM Business Requirements Definition phase**;
+- Align stakeholders on the **project scope, priorities, and compliance objectives**;
+- Present the IAM Core Team and their respective roles;
+- Validate the selection rationale of **SailPoint, Okta, and Wallix**;
+- Confirm dependencies (HRIS data, clinical system APIs, eHealth integration);
+- Define the approach and planning for drafting **BRD v0.1**.
+
+---
+
+## Key Discussion Topics
+- Current IAM maturity and operational challenges in CHR Brussels.
+- Presentation of the IAM vision and regulatory drivers.
+- Overview of the IAM architecture and tool selection.
+- Roles and responsibilities of the IAM Core Team (BA, Architect, Technical Lead).
+- Methodology for producing the BRD v0.1.
+- Expected deliverables, risks, and validation timeline.
+
+---
+
+## Meeting Objectives
+1. Launch the IAM requirements gathering phase.  
+2. Approve the governance structure and confirm the external consulting engagement.  
+3. Validate the IAM solution stack (SailPoint, Okta, Wallix).  
+4. Agree on the timeline and milestones for BRD v0.1 creation.  
+5. Assign responsibilities and confirm next steps.
+
+---
+
+## Project Governance
+The IAM program is sponsored by the **CIO** and managed under the **IT Security Department**.  
+Delivery of the BRD v0.1 is under the responsibility of the **external consulting firm** (IAM Core Team) working closely with CHR stakeholders.
+
+| Role | Function | Responsibility |
+|------|-----------|----------------|
+| **CIO** | Executive Sponsor | Provides strategic direction, validates milestones and scope. |
+| **IT Security Manager** | Project Owner | Ensures compliance alignment, oversees consulting work. |
+| **IAM Business Analyst (Consultant)** | BA Lead | Gathers requirements, identifies risks, and produces BRD v0.1. |
+| **IAM Architect (Consultant)** | Solution Design | Defines IAM functional architecture and integration scenarios. |
+| **Solution Architect (Consultant)** | Technical Lead | Designs technical integration between IAM layers and hospital systems. |
+| **HRIS Owner** | ULIS / Foederis Representative | Provides employee lifecycle data and access workflows. |
+| **Application Owners** | OASIS+, QBLOC, DXPlanning | Validate access use cases and data flow dependencies. |
+| **Compliance Officer (DPO)** | Legal / Privacy | Validates GDPR, ISO 27799, and eHealth requirements. |
+
+---
+
+## Next Steps
+| Action | Owner | Target |
+|--------|--------|--------|
+| Share kick-off meeting summary | Project Manager | +3 days |
+| Validate project scope and assumptions | CIO / IT Security | Week 1 |
+| Draft BRD v0.1 outline (structure & content) | IAM Business Analyst | Week 1 |
+| Define Target Architecture overview | IAM Architect | Week 2 |
+| Document integration assumptions (APIs, MFA, HR sync) | Solution Architect | Week 2 |
+| Conduct functional workshops (OASIS+, QBLOC, DXPlanning) | IAM Business Analyst | Week 3 |
+| Deliver BRD v0.1 | IAM Core Team | Week 4 |
+
+---
+
+## References
+- [01_Introduction-and-Context/1.2_Project-Objectives-and-Scope.md](../01_Introduction-and-Context/1.2_Project-Objectives-and-Scope.md)  
+- [01_Introduction-and-Context/1.4_Regulatory-Context.md](../01_Introduction-and-Context/1.4_Regulatory-Context.md)  
+- [01_Introduction-and-Context/1.5_Project-Assumptions.md](../01_Introduction-and-Context/1.5_Project-Assumptions.md)  
+- [03_BRD/3.2_Risk-and-Impact-Analysis.md](../03_BRD/3.2_Risk-and-Impact-Analysis.md)  
+- [05_Analysis-and-Design/5.2_TO-BE-Architecture.md](../05_Analysis-and-Design/5.2_TO-BE-Architecture.md)
+
 
