--- a/02_Kickoff-and-Governance/2.2_Stakeholder-register.md
+++ b/02_Kickoff-and-Governance/2.2_Stakeholder-register.md
@@ -1,1 +1,73 @@
+# 2.2 Stakeholder Register
+
+## Context
+The stakeholder register identifies all key participants involved in the **CHR Brussels IAM Transformation Program**.  
+This register ensures clarity on each stakeholder’s **role, influence, interest, and responsibilities** throughout the project lifecycle.
+
+The IAM initiative is a **joint effort between CHR Brussels and an external consulting firm** specializing in Identity and Access Management (IAM).  
+The consulting firm provides a **Core IAM Team** composed of a Business Analyst, an IAM Architect, and a Solution Architect — all working closely with the hospital’s IT, HR, and compliance departments.
+
+Effective stakeholder alignment is essential for producing a coherent **Business Requirements Document (BRD v0.1)** and achieving the program’s strategic objectives: regulatory compliance, Zero Trust adoption, and secure patient data management.
+
+---
+
+## Stakeholder Overview
+| Category | Stakeholder | Role / Function | Responsibility | Influence | Interest | Engagement Strategy |
+|-----------|--------------|-----------------|----------------|------------|-----------|----------------------|
+| **Executive Leadership** | **Chief Information Officer (CIO)** | Executive Sponsor | Provides strategic direction, validates scope and funding, approves key deliverables. | High | High | Regular steering meetings, validation checkpoints. |
+| **IT Security Management** | **IT Security Manager** | Project Owner | Oversees IAM roadmap, ensures alignment with security and compliance frameworks. | High | High | Weekly progress reviews with IAM Core Team. |
+| **External Consulting Firm** | **IAM Business Analyst (Consultant)** | Requirements Lead | Gathers business needs, identifies risks, documents IAM requirements, authors BRD v0.1. | High | High | Continuous collaboration with business and IT stakeholders. |
+|  | **IAM Architect (Consultant)** | Solution Design Lead | Defines IAM target capabilities, ensures integration consistency across IGA, IDP, PAM. | Medium | High | Architecture workshops and validation sessions. |
+|  | **Solution Architect (Consultant)** | Technical Lead | Designs system integrations (APIs, SSO, MFA), documents technical assumptions. | Medium | High | Technical design reviews, joint validation with IT teams. |
+| **HR Department** | **HRIS Owner (ULIS / Foederis)** | Data Source Owner | Provides identity data and supports lifecycle automation workflows. | Medium | High | Integration workshops, HR data quality validation. |
+| **Clinical Systems Owners** | **OASIS+ Owner** | EMR Application Owner | Ensures patient record access follows security and consent rules. | High | High | Requirements and test workshops. |
+|  | **QBLOC Owner** | Surgical Application Owner | Validates access and traceability in operating room management. | Medium | High | Functional workshops with IAM BA. |
+|  | **DXPlanning Owner** | Scheduling System Owner | Validates user roles and appointment workflows. | Medium | Medium | Integration testing and scenario validation. |
+| **Compliance & Legal** | **Data Protection Officer (DPO)** | Compliance Lead | Ensures GDPR, ISO 27799, and eHealth Belgium alignment. | High | High | Compliance checkpoints and validation sign-offs. |
+| **IT Infrastructure** | **System & Network Lead** | IT Ops | Prepares environments, ensures readiness for IAM tools deployment. | Medium | Medium | Technical follow-up and environment readiness meetings. |
+| **End-User Representatives** | **Administrative Staff Delegate** | Reception / Admissions | Provides operational feedback on IAM usability and workflow impact. | Low | High | Pilot user testing, communication sessions. |
+| **Medical Staff Representative** | **Clinical Users Delegate** | Physicians / Surgeons | Validates SSO and MFA usability in clinical context. | Medium | High | Focus groups, feedback loops during testing phase. |
+| **Vendors / Technology Partners** | **SailPoint, Okta, Wallix Representatives** | Product Experts | Provide best practices, technical support, and solution-specific expertise. | Medium | Medium | Bi-weekly coordination calls and integration support. |
+
+---
+
+## Stakeholder Mapping
+To facilitate communication and decision-making, stakeholders are positioned according to their **influence** and **interest** level.
+
+| Influence | Interest | Engagement Strategy |
+|------------|-----------|----------------------|
+| **High / High** | CIO, IT Security, IAM BA, DPO | Keep closely engaged. Involve in every major decision and review. |
+| **High / Medium** | IAM Architect, Clinical Application Owners | Engage through regular workshops and status updates. |
+| **Medium / High** | HRIS Owner, Medical Staff, Solution Architect | Maintain collaboration and visibility on progress. |
+| **Medium / Medium** | IT Infrastructure, Vendors | Provide targeted updates and technical coordination. |
+| **Low / High** | Administrative Staff | Engage during training, user acceptance testing, and feedback sessions. |
+
+---
+
+## Communication Plan
+| Communication Type | Audience | Frequency | Owner | Channel / Tool |
+|---------------------|-----------|------------|--------|----------------|
+| **Steering Committee** | CIO, IT Security, DPO, IAM Core Team | Monthly | Project Manager | Teams / On-site meeting |
+| **Project Coordination Meeting** | IAM Core Team, HR, App Owners | Weekly | IAM Business Analyst | Teams |
+| **Architecture Workshop** | IAM Architect, Solution Architect, IT Infra | Bi-weekly | IAM Architect | Technical sessions |
+| **Compliance Review** | DPO, IT Security, IAM BA | On key milestones | IAM BA | Documentation review |
+| **User Workshops** | End-user representatives, App Owners | During BRD validation | IAM BA | Focus group sessions |
+| **Vendor Sync Call** | Okta, SailPoint, Wallix | Bi-weekly | Solution Architect | Online session |
+
+---
+
+## Engagement Principles
+- **Transparency:** All stakeholders have access to up-to-date project documentation through a shared project workspace.  
+- **Accountability:** Each deliverable (BRD, architecture, risk register) has a clear owner and validation path.  
+- **Compliance-driven:** All stakeholders must consider GDPR, NIS2, ISO 27001, and eHealth regulations in their decisions.  
+- **Zero Trust alignment:** IAM decisions are guided by least privilege, continuous verification, and traceability principles.  
+- **Feedback loop:** Regular workshops and validation sessions ensure that business needs remain aligned with IAM design choices.
+
+---
+
+## Next Steps
+- Validate the stakeholder register and confirm engagement owners.  
+- Share this register with all project participants after the Kick-off Meeting.  
+- Maintain updates throughout the project lifecycle as stakeholders evolve.  
+- Use this register as a reference for the **BRD v0.1 validation** and subsequent architecture workshops.
 
