--- a/02_Kickoff-and-Governance/2.4_Communication-Plan.md
+++ b/02_Kickoff-and-Governance/2.4_Communication-Plan.md
@@ -1,1 +1,53 @@
+# 2.5 Communication Plan
+
+## Context
+The IAM Transformation Program at CHR Brussels involves multiple stakeholder groups: hospital leadership, IT Security, HR, clinical application owners (DXPlanning, QBLOC, OASIS+), compliance, and end-user representatives from medical and administrative teams.
+
+Because this program directly impacts how users authenticate, access patient data, schedule interventions, and manage admissions, communication cannot be treated as a purely technical activity. It is an essential success factor for adoption, auditability, and operational continuity.
+
+This Communication Plan defines:
+- how information will circulate between the IAM Core Team (external consulting team) and CHR Brussels stakeholders,
+- how decisions will be escalated, validated, and recorded,
+- how changes will be announced to impacted users (clinical staff, secretaries, admission staff, IT administrators),
+- and how we ensure traceability of approvals for compliance purposes (GDPR, NIS2, ISO 27001, ISO 27799, eHealth Belgium).
+
+The plan supports three parallel needs:
+1. **Delivery governance** – keeping sponsors and management aligned on progress, risks, and decisions.
+2. **Business engagement** – ensuring that process owners (admission, surgery, scheduling) validate requirements and operating scenarios that will be documented in BRD v0.1 and BRD v1.
+3. **Change readiness** – preparing the organization for new IAM practices such as MFA, SSO, role-based access, privileged access monitoring, and access review processes.
+
+## Objectives of the Communication Plan
+- Establish a clear, predictable communication rhythm across all streams (requirements, architecture, compliance, UAT, go-live).
+- Define who is informed of what, when, and through which channel.
+- Prevent misalignment between IT Security, HR, and clinical operations.
+- Provide evidence of structured communication for audit and regulatory purposes.
+- Support the controlled rollout of SailPoint (IGA), Okta (IDP), and Wallix (PAM), without disrupting critical hospital operations.
+
+## Scope
+This Communication Plan applies to:
+- Internal stakeholders at CHR Brussels (CIO, IT Security, HRIS, Application Owners, DPO).
+- The external IAM Core Team (Business Analyst, IAM Architect, Solution Architect).
+- End-user representatives involved in UAT and pilot phases.
+- Technology vendors (SailPoint, Okta, Wallix) when escalation or clarification is required.
+
+The plan covers the full lifecycle of the engagement:
+1. Analysis & BRD definition (BRD v0.1),
+2. Target design and validation (BRD v1),
+3. User Acceptance Testing,
+4. Deployment preparation,
+5. Handover to operational governance.
+
+Communication is therefore treated as a controlled workstream, not an afterthought.
+
+
+
+## Communication Plan
+| Communication Type | Audience | Frequency | Owner | Channel / Tool |
+|---------------------|-----------|------------|--------|----------------|
+| **Steering Committee** | CIO, IT Security, DPO, IAM Core Team | Monthly | Project Manager | Teams / On-site meeting |
+| **Project Coordination Meeting** | IAM Core Team, HR, App Owners | Weekly | IAM Business Analyst | Teams |
+| **Architecture Workshop** | IAM Architect, Solution Architect, IT Infra | Bi-weekly | IAM Architect | Technical sessions |
+| **Compliance Review** | DPO, IT Security, IAM BA | On key milestones | IAM BA | Documentation review |
+| **User Workshops** | End-user representatives, App Owners | During BRD validation | IAM BA | Focus group sessions |
+| **Vendor Sync Call** | Okta, SailPoint, Wallix | Bi-weekly | Solution Architect | Online session |
 
