--- a/02_Kickoff-and-Governance/2.4_Communication-Plan.md
+++ b/02_Kickoff-and-Governance/2.4_Communication-Plan.md
@@ -39,15 +39,26 @@ The plan covers the full lifecycle of the engagement:
 
 Communication is therefore treated as a controlled workstream, not an afterthought.
 
+## Communication Matrix
+| Communication Type | Audience | Frequency | Owner | Channel / Tool | Purpose |
+|---------------------|-----------|------------|--------|----------------|----------|
+| **Steering Committee** | CIO, IT Security, DPO, IAM Core Team | Monthly | Project Manager (Consultant) | Teams / On-site | Strategic decisions, risks, approvals |
+| **Project Coordination Meeting** | IAM Core Team, HR, App Owners | Weekly | IAM Business Analyst | Teams | Follow-up on BRD progress, blockers, dependencies |
+| **Architecture Workshop** | IAM Architect, Solution Architect, IT Infra | Bi-weekly | IAM Architect | Teams | Define integration design and validation |
+| **Compliance Review** | DPO, IT Security, IAM BA | Milestone-based | IAM BA | Documentation Review | Validate GDPR / ISO / NIS2 compliance |
+| **User Workshops** | End-user representatives, App Owners | As needed | IAM BA | Teams / On-site | Collect business feedback for requirements validation |
+| **Vendor Sync Call** | Okta, SailPoint, Wallix | Bi-weekly | Solution Architect | Online Session | Resolve integration or support questions |
+| **UAT Preparation Meeting** | IT Security, App Owners, IAM Core Team | Before UAT start | IAM BA | Teams | Validate UAT scope and acceptance criteria |
+| **Change Announcement** | End Users, Clinical Staff | Before Go-Live | IT Security Manager | Email / Intranet | Inform users about IAM process changes |
+| **Post-Go-Live Support Call** | IT Security, App Owners, IAM BA | Daily (first week) | Project Manager | Teams / Ticketing | Monitor stability and collect feedback |
 
+---
 
-## Communication Plan
-| Communication Type | Audience | Frequency | Owner | Channel / Tool |
-|---------------------|-----------|------------|--------|----------------|
-| **Steering Committee** | CIO, IT Security, DPO, IAM Core Team | Monthly | Project Manager | Teams / On-site meeting |
-| **Project Coordination Meeting** | IAM Core Team, HR, App Owners | Weekly | IAM Business Analyst | Teams |
-| **Architecture Workshop** | IAM Architect, Solution Architect, IT Infra | Bi-weekly | IAM Architect | Technical sessions |
-| **Compliance Review** | DPO, IT Security, IAM BA | On key milestones | IAM BA | Documentation review |
-| **User Workshops** | End-user representatives, App Owners | During BRD validation | IAM BA | Focus group sessions |
-| **Vendor Sync Call** | Okta, SailPoint, Wallix | Bi-weekly | Solution Architect | Online session |
+## Communication Principles
+- **Transparency:** project updates and key decisions are shared systematically.  
+- **Traceability:** all major communications (decisions, approvals) are archived in the shared project workspace.  
+- **Consistency:** a single source of truth (Teams channel + SharePoint) ensures all documents are up-to-date.  
+- **Accessibility:** all stakeholders can access the documentation repository (BRD, RACI, Risk Register, etc.).  
+- **Auditability:** meeting minutes and approval logs are retained as compliance evidence.  
+
 
