--- a/02_Kickoff-and-Governance/2.5_Project-Timeline.md
+++ b/02_Kickoff-and-Governance/2.5_Project-Timeline.md
@@ -124,7 +124,7 @@ The timeline below assumes a progressive rollout:
 - Compliance (DPO) must sign off on any access model involving patient data.
 
 ## Planning Deliverables
-- `2.4_Project-Timeline.md` (this file)  
-- `Project-Timeline-CHR-Brussels-IAM.png` (optional visual / Gantt-style timeline you can include in /99_Support-Documents/)  
-- Milestone list to be embedded later in the BRD_V1.pdf  
+1) Project timeline (this file)
+2) Gant Diagram
+3) Milestone list to be embedded later in the BRD_V1.pdf  
 
