--- a/03_BRD/3.2_Risk-and-Impact-Analysis.md
+++ b/03_BRD/3.2_Risk-and-Impact-Analysis.md
@@ -1,1 +1,79 @@
+# 3.2 Risk and Impact Analysis
+
+## 3.2.1 Context
+CHR Brussels handles thousands of patient interactions daily — from appointment scheduling to surgery planning and patient record management.  
+Each operation involves sensitive data, critical clinical workflows, and multi-system interactions (DXPlanning, QBLOC, OASIS+).
+
+Currently, access to these systems is managed manually. There is limited traceability and inconsistent control over “who can access what and why”.  
+This exposes the hospital to operational, confidentiality, and compliance risks that can impact patient safety and regulatory alignment.
+
+This Risk and Impact Analysis provides a structured view of:
+- risks associated with core patient journey processes,
+- their potential business and clinical impact,
+- and IAM mitigation measures (IGA, IDP, PAM) to reduce exposure.
+
+---
+
+## 3.2.2 Consolidated Risk Analysis Table
+
+| # | Process | Risk Category | Description | Impact | IAM Mitigation (IGA / IDP / PAM) | Residual Risk |
+|---|----------|----------------|--------------|----------|----------------------------------|----------------|
+| **1** | **Patient Appointment Scheduling (DXPlanning)** | Operational | Double booking, wrong patient, or missed scheduling due to unrestricted access. | High | **IGA (SailPoint):** Enforces role-based access (secretariat vs specialist).<br>**IDP (Okta):** Provides SSO and audit of logins.<br>**PAM (Wallix):** Protects HL7 integration credentials. | Low |
+|  |  | Confidentiality | Exposure of patient data during appointment creation by unauthorized staff. | High | **IGA:** Defines least-privilege roles.<br>**IDP:** Enforces MFA for all DXPlanning sessions. | Low |
+|  |  | Compliance | Violation of GDPR (data minimization, access justification). | High | **IGA + DPO Review:** Regular access recertification campaigns. | Medium |
+| **2** | **Patient Admission & Record Lookup (OASIS+)** | Confidentiality | Unauthorized viewing of patient files, especially in shared or public areas. | High | **IGA:** Field-level restrictions for admission staff.<br>**IDP:** Contextual authentication (device/location). | Low |
+|  |  | Operational | Incorrect identification due to manual lookup or missing eHealth consent check. | High | **IDP:** eID-based login & consent validation.<br>**IGA:** Access only to consented records. | Low |
+|  |  | Compliance | Breach of GDPR / ISO 27799 on medical data confidentiality. | Critical | **IGA:** Integrates eHealth consent APIs.<br>**PAM:** Audits admin sessions on database. | Low |
+| **3** | **Surgery Planning (QBLOC)** | Operational | Incorrect assignment of operating room, staff, or devices due to privilege misuse. | High | **IGA:** Delegation model for chiefs of service.<br>**IDP:** Session continuity between QBLOC & OASIS+.<br>**PAM:** Session recording for privileged modifications. | Medium |
+|  |  | Integrity / Fraud | Intentional modification or override of surgical planning. | Critical | **PAM:** “Check-in/check-out” for privileged accounts.<br>**IGA:** SoD between planning and validation. | Low |
+|  |  | Compliance | Incomplete audit trail for surgery-related data changes. | High | **PAM:** Full session recording and forensic traceability. | Low |
+| **4** | **Room Admission & Discharge (OASIS+)** | Operational | Room booking conflicts, duplicate patient files, inconsistent insurance data. | Medium | **IGA:** Coordinates workflows between HR, admissions, and care units.<br>**IDP:** Unified token across systems. | Low |
+|  |  | Compliance | Admission without valid consent or missing patient ID verification. | High | **IDP:** eHealth / eID authentication.<br>**IGA:** Validation rule before admission approval. | Low |
+| **5** | **e-Prescription & Medical Acts (OASIS+ / eHealth)** | Identity Fraud | Prescription signed by a non-professional or impersonated user. | Critical | **IDP:** MFA + eID login.<br>**IGA:** Links eHealth ID to hospital role.<br>**PAM:** Secures prescription APIs and audit logs. | Low |
+|  |  | Legal / Compliance | Invalid signature or missing traceability for Recip-e transactions. | Critical | **IGA:** Manages professional ID lifecycle.<br>**PAM:** Ensures audit readiness for digital signatures. | Low |
+
+---
+
+## 3.2.3 Risk Scoring Model
+
+| Impact Level | Description |
+|---------------|-------------|
+| **Critical** | Direct impact on patient safety, regulatory non-compliance (GDPR, NIS2), or medical liability. |
+| **High** | Significant operational disruption or data confidentiality incident. |
+| **Medium** | Limited scope or easily recoverable event. |
+| **Low** | Minor incident with no impact on patient care or data integrity. |
+
+Each identified risk has been evaluated based on:
+- Probability of occurrence  
+- Impact on patient safety and continuity of care  
+- Regulatory exposure  
+- Reversibility  
+
+---
+
+## 3.2.4 Risk Mitigation Summary
+
+| IAM Component | Primary Risk Mitigation Capability |
+|----------------|------------------------------------|
+| **SailPoint (IGA)** | Role-based access control, automated provisioning/deprovisioning, access certification, segregation of duties. |
+| **Okta (IDP)** | Strong authentication (MFA, eID), contextual access (device/location), unified SSO auditability. |
+| **Wallix (PAM)** | Privileged session recording, credential vaulting, accountability for administrative operations. |
+
+Together, these three layers enforce a **Zero Trust IAM Governance** model, no implicit trust, continuous verification, and full traceability of privileged actions.
+
+---
+
+## 3.2.5 Conclusion
+Without an integrated IAM framework, CHR Brussels remains exposed to:
+- operational inefficiencies,  
+- potential GDPR / ISO 27799 violations,  
+- and risks that directly affect patient safety and clinical accountability.
+
+The adoption of **SailPoint, Okta, and Wallix** significantly reduces these exposures by embedding IAM controls directly into daily operations and patient journey workflows.
+
+This analysis serves as the foundation for:
+- the **Business Requirements (Section 3.3)**, and  
+- the **Risk Register**, a living artifact continuously updated through the project lifecycle.
+
+
 
