--- a/03_BRD/3.2_Risk-and-Impact-Analysis.md
+++ b/03_BRD/3.2_Risk-and-Impact-Analysis.md
@@ -12,6 +12,10 @@ This Risk and Impact Analysis provides a structured view of:
 - their potential business and clinical impact,
 - and IAM mitigation measures (IGA, IDP, PAM) to reduce exposure.
 
+> **Note:**  
+> A detailed Risk Register (see annex 3.2.A — `Risk-Register_CHR-IAM.xlsx`) consolidates all identified risks with their probability, ownership, and mitigation status.  
+> The table below presents a summarized view of critical risks impacting the hospital’s core patient journey.
+
 ---
 
 ## 3.2.2 Consolidated Risk Analysis Table
@@ -74,6 +78,5 @@ The adoption of **SailPoint, Okta, and Wallix** significantly reduces these expo
 This analysis serves as the foundation for:
 - the **Business Requirements (Section 3.3)**, and  
 - the **Risk Register**, a living artifact continuously updated through the project lifecycle.
-
 
 
