--- a/03_BRD/3.2.1_Risk-Matrix-Visualization.md
+++ b/03_BRD/3.2.1_Risk-Matrix-Visualization.md
@@ -1,1 +1,20 @@
+### 3.2.5 Risk Matrix – Impact vs Probability
+
+| **Impact ↓** / **Probability →** | **Low** | **Medium** | **High** |
+|----------------------------------|----------|-------------|-----------|
+| **Critical** | 🟥 R-004, R-005 | 🟥 R-003 | — |
+| **High** | — | 🟧 R-001, R-002 | — |
+| **Medium** | — | — | — |
+| **Low** | — | — | — |
+
+**Legend:**  
+🟥 = Critical risk — requires immediate IAM controls (IGA / IDP / PAM).  
+🟧 = High risk — to be mitigated through process and access role improvements.  
+🟨 = Medium risk — can be monitored or accepted after IAM rollout.  
+🟩 = Low risk — negligible impact.
+
+**Interpretation:**  
+- Most high-impact risks fall within the *Critical* impact category, even when their probability is low to medium.  
+- This pattern reflects healthcare reality: even rare incidents (surgery data change, prescription misuse) can have life-critical consequences.  
+- IAM measures therefore target *impact reduction* and *traceability enhancement*, not only probability reduction.
 
