--- a/03_BRD/3.4_Business-Requirements-Matrix.md
+++ b/03_BRD/3.4_Business-Requirements-Matrix.md
@@ -1,1 +1,53 @@
+# 3.4 Business Requirements Matrix
+
+## 3.4.1 Objective
+This section consolidates the business requirements derived from the IAM Solution Mapping (Section 3.3) and the Risk Analysis (Section 3.2).  
+Each requirement is designed to ensure secure, compliant, and traceable management of identities and access rights in the CHR Brussels environment.
+
+---
+
+## 3.4.2 Business Requirements Table
+
+| **BR ID** | **Business Process** | **System / Application** | **Business Requirement** | **IAM Component** | **Regulatory Reference** | **Linked Risk ID** |
+|------------|---------------------|---------------------------|---------------------------|-------------------|---------------------------|--------------------|
+| **BR-001** | Appointment Scheduling | DXPlanning | Only authorized medical secretaries can create or modify appointments according to their functional department. | SailPoint (IGA) | GDPR Art.32 – Access Control | R-001 |
+| **BR-002** | Appointment Scheduling | DXPlanning | All DXPlanning users must authenticate via Okta SSO with MFA enforced. | Okta (IDP) | NIS2 Annex I – Authentication | R-002 |
+| **BR-003** | Appointment Scheduling | DXPlanning | Technical HL7 accounts must be vaulted and monitored. | Wallix (PAM) | ISO 27001 A.9.2.3 | R-001 |
+| **BR-004** | Patient Admission | OASIS+ | Reception staff can only view fields relevant to admission and consent verification. | SailPoint (IGA) | GDPR Art.5 – Data Minimization | R-003 |
+| **BR-005** | Patient Admission | OASIS+ | Access to patient records requires contextual authentication (location, device). | Okta (IDP) | NIS2 – Contextual Access | R-003 |
+| **BR-006** | Surgery Planning | QBLOC | Only surgeons and chiefs of service can approve or modify surgery schedules. | SailPoint (IGA) | ISO 27001 A.9.4.3 | R-004 |
+| **BR-007** | Surgery Planning | QBLOC | All privileged operations in QBLOC must be session-recorded and auditable. | Wallix (PAM) | ISO 27001 A.12.4 | R-004 |
+| **BR-008** | Prescription Management | ePrescription / eHealth | ePrescriptions must be digitally signed via eID + MFA, linked to practitioner’s identity. | Okta (IDP) + SailPoint (IGA) | eHealth Belgium, GDPR (Non-repudiation) | R-005 |
+| **BR-009** | Prescription Management | ePrescription / eHealth | All privileged API access must be vaulted and monitored. | Wallix (PAM) | NIS2 Annex I, ISO 27001 | R-005 |
+
+---
+
+## 3.4.3 Traceability Overview
+
+| **Requirement Source** | **Linked Output** | **Document / Tool** |
+|-------------------------|------------------|---------------------|
+| Risk Analysis (3.2) | Business Requirements | This section (3.4) |
+| Business Requirements | Test Scenarios | UAT Scripts (Section 8.2) |
+| Business Requirements | Compliance Validation | RTM (Section 8.4) |
+| Business Requirements | Post-GoLive KPIs | Governance Metrics (Section 10) |
+
+---
+
+## 3.4.4 Deliverables
+
+| **Deliverable** | **Format** | **Description** |
+|------------------|-------------|-----------------|
+| `3.4_Business-Requirements-Matrix.md` | `.md` | Consolidated requirement documentation |
+| `Requirements-Traceability-Matrix.xlsx` | `.xlsx` | Excel file linking BR → Test Case → Validation Owner |
+| `BRD_V1.md` | `.md` | Full BRD version integrating sections 3.1 to 3.4 |
+| `BRD_V1.pdf` | `.pdf` | Presentation-ready version for stakeholders |
+
+---
+
+## 3.4.5 Summary
+This Business Requirements Matrix provides a single, traceable reference for IAM implementation.  
+Each requirement supports:
+- the mitigation of operational and compliance risks,
+- the alignment of IAM layers with Zero Trust principles,
+- and the foundation for testing, audit, and governance.
 
