--- a/03_BRD/3.4_Business-Requirements-Matrix.md
+++ b/03_BRD/3.4_Business-Requirements-Matrix.md
@@ -12,7 +12,7 @@ Each requirement is designed to ensure secure, compliant, and traceable manageme
 |------------|---------------------|---------------------------|---------------------------|-------------------|---------------------------|--------------------|
 | **BR-001** | Appointment Scheduling | DXPlanning | Only authorized medical secretaries can create or modify appointments according to their functional department. | SailPoint (IGA) | GDPR Art.32 – Access Control | R-001 |
 | **BR-002** | Appointment Scheduling | DXPlanning | All DXPlanning users must authenticate via Okta SSO with MFA enforced. | Okta (IDP) | NIS2 Annex I – Authentication | R-002 |
-| **BR-003** | Appointment Scheduling | DXPlanning | Technical HL7 accounts must be vaulted and monitored. | Wallix (PAM) | ISO 27001 A.9.2.3 | R-001 |
+| **BR-003** | Appointment Scheduling | DXPlanning | All service accounts used for HL7 data exchanges between hospital systems (DXPlanning, OASIS+, QBLOC) must be vaulted and monitored within Wallix PAM to ensure credential protection and traceability of automated data transfers. | Wallix (PAM) | ISO 27001 A.9.2.3 | R-001 |
 | **BR-004** | Patient Admission | OASIS+ | Reception staff can only view fields relevant to admission and consent verification. | SailPoint (IGA) | GDPR Art.5 – Data Minimization | R-003 |
 | **BR-005** | Patient Admission | OASIS+ | Access to patient records requires contextual authentication (location, device). | Okta (IDP) | NIS2 – Contextual Access | R-003 |
 | **BR-006** | Surgery Planning | QBLOC | Only surgeons and chiefs of service can approve or modify surgery schedules. | SailPoint (IGA) | ISO 27001 A.9.4.3 | R-004 |
