--- a/03_BRD/3.4_Business-Requirements-Matrix.md
+++ b/03_BRD/3.4_Business-Requirements-Matrix.md
@@ -2,7 +2,7 @@
 
 ## 3.4.1 Objective
 This section consolidates the business requirements derived from the IAM Solution Mapping (Section 3.3) and the Risk Analysis (Section 3.2).  
-Each requirement is designed to ensure secure, compliant, and traceable management of identities and access rights in the CHR Brussels environment.
+Each requirement ensures secure, compliant, and traceable management of identities and access rights within CHR Brussels’ hospital systems.
 
 ---
 
@@ -12,13 +12,13 @@ Each requirement is designed to ensure secure, compliant, and traceable manageme
 |------------|---------------------|---------------------------|---------------------------|-------------------|---------------------------|--------------------|
 | **BR-001** | Appointment Scheduling | DXPlanning | Only authorized medical secretaries can create or modify appointments according to their functional department. | SailPoint (IGA) | GDPR Art.32 – Access Control | R-001 |
 | **BR-002** | Appointment Scheduling | DXPlanning | All DXPlanning users must authenticate via Okta SSO with MFA enforced. | Okta (IDP) | NIS2 Annex I – Authentication | R-002 |
-| **BR-003** | Appointment Scheduling | DXPlanning | All service accounts used for HL7 data exchanges between hospital systems (DXPlanning, OASIS+, QBLOC) must be vaulted and monitored within Wallix PAM to ensure credential protection and traceability of automated data transfers. | Wallix (PAM) | ISO 27001 A.9.2.3 | R-001 |
+| **BR-003** | Appointment Scheduling / Inter-System Communication | DXPlanning ↔ OASIS+ ↔ QBLOC | All service accounts used for HL7 data exchanges between hospital systems (DXPlanning, OASIS+, QBLOC) must be vaulted and monitored within Wallix PAM to ensure credential protection, traceability, and prevention of unauthorized access. | Wallix (PAM) | ISO 27001 A.9.2.3 – Management of privileged access credentials | R-001 |
 | **BR-004** | Patient Admission | OASIS+ | Reception staff can only view fields relevant to admission and consent verification. | SailPoint (IGA) | GDPR Art.5 – Data Minimization | R-003 |
-| **BR-005** | Patient Admission | OASIS+ | Access to patient records requires contextual authentication (location, device). | Okta (IDP) | NIS2 – Contextual Access | R-003 |
-| **BR-006** | Surgery Planning | QBLOC | Only surgeons and chiefs of service can approve or modify surgery schedules. | SailPoint (IGA) | ISO 27001 A.9.4.3 | R-004 |
-| **BR-007** | Surgery Planning | QBLOC | All privileged operations in QBLOC must be session-recorded and auditable. | Wallix (PAM) | ISO 27001 A.12.4 | R-004 |
-| **BR-008** | Prescription Management | ePrescription / eHealth | ePrescriptions must be digitally signed via eID + MFA, linked to practitioner’s identity. | Okta (IDP) + SailPoint (IGA) | eHealth Belgium, GDPR (Non-repudiation) | R-005 |
-| **BR-009** | Prescription Management | ePrescription / eHealth | All privileged API access must be vaulted and monitored. | Wallix (PAM) | NIS2 Annex I, ISO 27001 | R-005 |
+| **BR-005** | Patient Admission | OASIS+ | Access to patient records requires contextual authentication (location, device, and time). | Okta (IDP) | NIS2 – Context-Aware Access | R-003 |
+| **BR-006** | Surgery Planning | QBLOC | Only surgeons and chiefs of service can approve or modify surgery schedules. Delegations must be traceable. | SailPoint (IGA) | ISO 27001 A.9.4.3 – Access Control | R-004 |
+| **BR-007** | Surgery Planning | QBLOC | All privileged operations in QBLOC must be session-recorded and auditable. | Wallix (PAM) | ISO 27001 A.12.4 – Event Logging | R-004 |
+| **BR-008** | Prescription Management | ePrescription / eHealth | Before any electronic prescription is issued, the practitioner must verify the patient’s therapeutic link via the patient’s eID card. Okta (IDP) must orchestrate this authentication step with the eHealth platform to ensure strong identity binding and non-repudiation. The final prescription must be digitally signed using the practitioner’s eID or eHealth certificate. | Okta (IDP) + SailPoint (IGA) + Wallix (PAM backend) | eHealth Belgium Framework, GDPR (Art.32 Integrity & Non-repudiation), ISO 27799 | R-005 |
+| **BR-009** | Prescription Management | ePrescription / eHealth | All privileged API and backend systems managing prescription data must be accessed only via vaulted, traceable privileged accounts. | Wallix (PAM) | NIS2 Annex I, ISO 27001 A.9.2.6 | R-005 |
 
 ---
 
@@ -45,9 +45,7 @@ Each requirement is designed to ensure secure, compliant, and traceable manageme
 ---
 
 ## 3.4.5 Summary
-This Business Requirements Matrix provides a single, traceable reference for IAM implementation.  
-Each requirement supports:
-- the mitigation of operational and compliance risks,
-- the alignment of IAM layers with Zero Trust principles,
-- and the foundation for testing, audit, and governance.
+This Business Requirements Matrix establishes a unified view of the hospital’s IAM governance framework.  
+It ensures that each clinical operation — from appointment scheduling to prescription issuance — complies with Zero Trust principles and regulatory mandates.  
+The next phase (3.5) will define the **Success Criteria**, measuring how effectively these requirements mitigate risks and strengthen compliance posture.
 
