--- a/03_BRD/3.2_Risk-and-Impact-Analysis.md
+++ b/03_BRD/3.2_Risk-and-Impact-Analysis.md
@@ -20,21 +20,14 @@ This Risk and Impact Analysis provides a structured view of:
 
 ## 3.2.2 Consolidated Risk Analysis Table
 
-| # | Process | Risk Category | Description | Impact | IAM Mitigation (IGA / IDP / PAM) | Residual Risk |
-|---|----------|----------------|--------------|----------|----------------------------------|----------------|
-| **1** | **Patient Appointment Scheduling (DXPlanning)** | Operational | Double booking, wrong patient, or missed scheduling due to unrestricted access. | High | **IGA (SailPoint):** Enforces role-based access (secretariat vs specialist).<br>**IDP (Okta):** Provides SSO and audit of logins.<br>**PAM (Wallix):** Protects HL7 integration credentials. | Low |
-|  |  | Confidentiality | Exposure of patient data during appointment creation by unauthorized staff. | High | **IGA:** Defines least-privilege roles.<br>**IDP:** Enforces MFA for all DXPlanning sessions. | Low |
-|  |  | Compliance | Violation of GDPR (data minimization, access justification). | High | **IGA + DPO Review:** Regular access recertification campaigns. | Medium |
-| **2** | **Patient Admission & Record Lookup (OASIS+)** | Confidentiality | Unauthorized viewing of patient files, especially in shared or public areas. | High | **IGA:** Field-level restrictions for admission staff.<br>**IDP:** Contextual authentication (device/location). | Low |
-|  |  | Operational | Incorrect identification due to manual lookup or missing eHealth consent check. | High | **IDP:** eID-based login & consent validation.<br>**IGA:** Access only to consented records. | Low |
-|  |  | Compliance | Breach of GDPR / ISO 27799 on medical data confidentiality. | Critical | **IGA:** Integrates eHealth consent APIs.<br>**PAM:** Audits admin sessions on database. | Low |
-| **3** | **Surgery Planning (QBLOC)** | Operational | Incorrect assignment of operating room, staff, or devices due to privilege misuse. | High | **IGA:** Delegation model for chiefs of service.<br>**IDP:** Session continuity between QBLOC & OASIS+.<br>**PAM:** Session recording for privileged modifications. | Medium |
-|  |  | Integrity / Fraud | Intentional modification or override of surgical planning. | Critical | **PAM:** “Check-in/check-out” for privileged accounts.<br>**IGA:** SoD between planning and validation. | Low |
-|  |  | Compliance | Incomplete audit trail for surgery-related data changes. | High | **PAM:** Full session recording and forensic traceability. | Low |
-| **4** | **Room Admission & Discharge (OASIS+)** | Operational | Room booking conflicts, duplicate patient files, inconsistent insurance data. | Medium | **IGA:** Coordinates workflows between HR, admissions, and care units.<br>**IDP:** Unified token across systems. | Low |
-|  |  | Compliance | Admission without valid consent or missing patient ID verification. | High | **IDP:** eHealth / eID authentication.<br>**IGA:** Validation rule before admission approval. | Low |
-| **5** | **e-Prescription & Medical Acts (OASIS+ / eHealth)** | Identity Fraud | Prescription signed by a non-professional or impersonated user. | Critical | **IDP:** MFA + eID login.<br>**IGA:** Links eHealth ID to hospital role.<br>**PAM:** Secures prescription APIs and audit logs. | Low |
-|  |  | Legal / Compliance | Invalid signature or missing traceability for Recip-e transactions. | Critical | **IGA:** Manages professional ID lifecycle.<br>**PAM:** Ensures audit readiness for digital signatures. | Low |
+| **Risk ID** | **Business Process** | **System(s)** | **Risk Description** | **Impact** | **Probability** | **Risk Level** | **Mitigation (IAM Control)** | **Linked BR ID** |
+|--------------|----------------------|----------------|----------------------|-------------|------------------|----------------|------------------------------|------------------|
+| **R-001** | Appointment Scheduling | DXPlanning | Unauthorized or erroneous scheduling (wrong patient, double booking) due to lack of access control and traceability. | High | Medium | 🟧 High | Role-based provisioning and access audit (IGA) | BR-001, BR-002 |
+| **R-002** | Appointment Scheduling / Integration | DXPlanning ↔ OASIS+ ↔ QBLOC | Technical service accounts used for HL7 exchanges are unmanaged, shared, or reused without traceability, leading to data integrity or confidentiality breaches. | High | Medium | 🟥 Critical | Vaulting and monitoring of HL7 accounts (PAM) | BR-003 |
+| **R-003** | Patient Admission | OASIS+ | Reception staff accessing full patient medical records without consent, violating GDPR minimization principle. | High | Medium | 🟧 High | Context-aware access (IDP) + field-level access limitation (IGA) | BR-004, BR-005 |
+| **R-004** | Surgery Planning | QBLOC | Unauthorized modification of surgical schedules or clinical resources due to lack of delegation traceability. | Critical | Low | 🟥 Critical | Role delegation and session recording (IGA + PAM) | BR-006, BR-007 |
+| **R-005** | Prescription & eHealth | ePrescription / eHealth | Prescription issued without validated therapeutic link or digital signature, exposing the hospital to legal and patient safety risks. | Critical | Low | 🟥 Critical | eID-based strong authentication (IDP + IGA) and privileged backend control (PAM) | BR-008, BR-009 |
+
 
 ---
 
