--- a/05_Analysis-and-Design/5.1_IAM_Dataflow_Diagram.md
+++ b/05_Analysis-and-Design/5.1_IAM_Dataflow_Diagram.md
@@ -6,8 +6,7 @@ This section illustrates how identity and access data move through the CHR Bruss
 
 ## 🔷 Overview Diagram
 
-*(Insert your diagram here – one global view showing all dataflows)*  
-Suggested tools: Draw.io, Lucidchart, Visio, or MermaidJS.
+![image_alt](https://github.com/Kristina-1991/IAM-Hospital-CaseStudy-SailPoint-Okta-Wallix/blob/2c1ea457e2f913d73e9aa229670f2a5393a3a3d7/99_Support-documents/IAM_DATAFLOW_DIAGRAM.PNG?raw=true)
 
 **Legend:**
 - 🟦 Identity Source (ULIS, Foederis)  
