--- a/05_Analysis-and-Design/5.2_Solution_Mapping.md
+++ b/05_Analysis-and-Design/5.2_Solution_Mapping.md
@@ -5,6 +5,15 @@
 This section defines how each IAM component — **SailPoint (IGA)**, **Okta (IDP)**, and **Wallix (PAM)** — addresses the functional and regulatory gaps identified in the risk analysis (Section 3.2).  
 The goal is to provide a clear functional mapping of IAM solutions across the hospital’s critical applications: **DXPlanning**, **OASIS+**, **QBLOC**, and **ePrescription/eHealth**.
 
+
+## 5.2.2 IAM Architecture Overview 
+
+The following diagram illustrates the overall architecture of the IAM ecosystem for CHR Brussels.  
+It highlights the integration between **HR sources (ULIS, Foederis)**, the **IAM Core Stack** (SailPoint, Okta, Wallix),  
+and the **target applications** (OASIS+, DXPlanning, QBLOC).
+
+
+
 ---
 
 ## 5.2.2 Overview of the IAM Architecture
