--- a/05_Analysis-and-Design/5.2_Solution_Mapping.md
+++ b/05_Analysis-and-Design/5.2_Solution_Mapping.md
@@ -12,11 +12,13 @@ The following diagram illustrates the overall architecture of the IAM ecosystem 
 It highlights the integration between **HR sources (ULIS, Foederis)**, the **IAM Core Stack** (SailPoint, Okta, Wallix),  
 and the **target applications** (OASIS+, DXPlanning, QBLOC).
 
+![image_alt](https://github.com/Kristina-1991/IAM-Hospital-CaseStudy-SailPoint-Okta-Wallix/blob/a5c486879d8a85878006da124c0233eab6cf4245/99_Support-documents/CHR%20Architecture.PNG?raw=true)
 
+*Figure 1 — High-level IAM ecosystem diagram showing HRIS → IAM Core (IGA, IDP, PAM) → Applications.*
 
 ---
 
-## 5.2.2 Overview of the IAM Architecture
+## 5.2.3 Overview of the IAM Architecture
 
 The CHR Brussels IAM program is designed around the **Zero Trust model**, ensuring that no user, system, or device is inherently trusted.  
 Access to patient-related data and clinical systems must be continuously verified, context-aware, and traceable.
@@ -29,7 +31,7 @@ Access to patient-related data and clinical systems must be continuously verifie
 
 ---
 
-## 5.2.3 IAM Solution Coverage by Business Process
+## 5.2.4 IAM Solution Coverage by Business Process
 
 | **Business Process** | **Primary Systems** | **IGA (SailPoint)** | **IDP (Okta)** | **PAM (Wallix)** |
 |-----------------------|--------------------|---------------------|----------------|------------------|
@@ -40,7 +42,7 @@ Access to patient-related data and clinical systems must be continuously verifie
 
 ---
 
-## 5.2.4 Solution Interoperability
+## 5.2.5 Solution Interoperability
 
 The three layers of IAM operate in a **complementary and interconnected** manner:
 
@@ -55,7 +57,7 @@ Example Flow:
 
 ---
 
-## 5.2.5 Compliance Integration
+## 5.2.6 Compliance Integration
 
 | **Regulation / Standard** | **Supported by** | **IAM Capability** | **Example** |
 |----------------------------|------------------|--------------------|-------------|
@@ -66,7 +68,7 @@ Example Flow:
 
 ---
 
-## 5.2.6 Deliverables
+## 5.2.7 Deliverables
 
 | **Deliverable** | **Format** | **Description** |
 |------------------|-------------|-----------------|
@@ -77,7 +79,7 @@ Example Flow:
 
 ---
 
-## 5.2.7 Summary
+## 5.2.8 Summary
 
 The IAM ecosystem proposed for CHR Brussels ensures:
 - **Separation of duties** between identity governance, authentication, and privilege control.
