--- a/05_Analysis-and-Design/5.3_Role_Model_Definition.md
+++ b/05_Analysis-and-Design/5.3_Role_Model_Definition.md
@@ -1,1 +1,48 @@
+# 5.3 Role Model Definition
+
+## 5.3.1 Objective
+This section defines the role model implemented within the IAM ecosystem.  
+It ensures clear segregation of duties, standardized access management, and full traceability of user privileges.
+
+---
+
+## 5.3.2 Functional Roles
+
+| **Role Name** | **Department / System** | **Key Access Rights** | **Applications Involved** |
+|----------------|--------------------------|------------------------|----------------------------|
+| Reception Agent | Admissions | View / update patient identity, manage appointments | OASIS+, DXPlanning |
+| Medical Secretary | Administrative | Create / modify appointments | DXPlanning |
+| Nurse | Care Services | View patient record, update treatment info | OASIS+ |
+| Surgeon | Surgery | Modify surgery plan, view anesthesia data | QBLOC, DXPlanning |
+| Pharmacist | Pharmacy | Validate ePrescriptions | ePrescription |
+| IT Administrator | IT | Manage system integrations, HL7 accounts | SailPoint, Okta, Wallix |
+
+---
+
+## 5.3.3 Technical and Privileged Roles
+
+| **Role Name** | **System** | **Privileges** | **Managed by** | **PAM Control** |
+|----------------|------------|----------------|----------------|-----------------|
+| IAM Admin | SailPoint / Okta | Full configuration and provisioning | IAM Core Team | Wallix |
+| HRIS Admin | ULIS / Foederis | Identity feed management | HR Dept | Wallix |
+| Application Admin | OASIS+, QBLOC | Application-level admin | IT Dept | Wallix |
+
+---
+
+## 5.3.4 Segregation of Duties (SoD) Matrix
+
+| **Role A** | **Role B** | **Conflict Type** | **Description** | **Control / Mitigation** |
+|-------------|-------------|-------------------|------------------|--------------------------|
+| IT Admin | HRIS Admin | High | Can both create and provision accounts | Split duties + Wallix recording |
+| Surgeon | Pharmacist | Medium | Approve and dispense prescriptions | Role-based control in IGA |
+| Secretary | Reception Agent | Low | Duplicate scheduling | Workflow validation in IGA |
+
+> A complete Segregation of Duties (SoD) matrix, including all role combinations and risk scoring,
+> is provided as a separate deliverable: [Role-SoD-Matrix.xlsx]()
+
+---
+
+## 5.3.5 Summary
+The role model ensures that every identity has the minimum necessary rights for its function.  
+All role assignments are managed via **SailPoint workflows**, reviewed quarterly, and monitored by **Wallix** for privileged sessions.
 
