--- a/05_Analysis-and-Design/5.3_Role_Model_Definition.md
+++ b/05_Analysis-and-Design/5.3_Role_Model_Definition.md
@@ -38,7 +38,7 @@ It ensures clear segregation of duties, standardized access management, and full
 | Secretary | Reception Agent | Low | Duplicate scheduling | Workflow validation in IGA |
 
 > A complete Segregation of Duties (SoD) matrix, including all role combinations and risk scoring,
-> is provided as a separate deliverable: [Role-SoD-Matrix.xlsx]()
+> is provided as a separate deliverable: [Role-SoD-Matrix.xlsx](../99_Support-documents/Role_SoD_Matrix.xlsx) (click on "view raw")
 
 ---
 
