--- a/05_Analysis-and-Design/5.4_Application_Inventory_and_Access_Matrix.md
+++ b/05_Analysis-and-Design/5.4_Application_Inventory_and_Access_Matrix.md
@@ -1,1 +1,33 @@
+# 5.4 Application Inventory and Access Matrix
+
+## 5.4.1 Objective
+This section lists all applications included in the IAM perimeter, their criticality, and the access model applied.
+
+---
+
+## 5.4.2 Application Inventory
+
+| **Application** | **Type** | **Owner** | **IAM Integration** | **Criticality** |
+|------------------|----------|------------|----------------------|-----------------|
+| ULIS | HRIS | HR Dept | Source (identity feed) | High |
+| Foederis | HRIS | HR Dept | Source (identity feed) | Medium |
+| DXPlanning | Clinical Scheduling | Operations | Provisioned via SailPoint | High |
+| OASIS+ | EHR / Patient Record | Medical | Provisioned via SailPoint + Okta | Critical |
+| QBLOC | Surgery Planning | Surgery Dept | Federated via Okta | High |
+| ePrescription | eHealth | Pharmacy | Federated via Okta (eID) | Critical |
+| Wallix | PAM | IT Security | PAM Core | High |
+| SailPoint | IGA | IT Security | IAM Core | High |
+| Okta | IDP | IT Security | IAM Core | High |
+
+---
+
+## 5.4.3 Access Matrix
+
+| **Application** | **Role** | **Access Level** | **Authentication** | **Provisioning Source** |
+|------------------|----------|------------------|--------------------|--------------------------|
+| DXPlanning | Medical Secretary | Create / edit appointments | Okta (SSO + MFA) | SailPoint |
+| OASIS+ | Nurse | View / update patient data | Okta (SSO) | SailPoint |
+| QBLOC | Surgeon | Modify surgery plan | Okta (SSO) | SailPoint |
+| ePrescription | Pharmacist | Sign ePrescription | Okta (eID + MFA) | SailPoint |
+| Wallix | IT Admin | Privileged session | Native login (Vaulted) | PAM |
 
