--- a/05_Analysis-and-Design/5.5_Access_Review_Process.md
+++ b/05_Analysis-and-Design/5.5_Access_Review_Process.md
@@ -1,1 +1,42 @@
+# 5.5 Access Review Process
+
+## 5.5.1 Objective
+To ensure that access rights remain aligned with job functions, CHR Brussels performs periodic access reviews managed through SailPoint IGA.
+
+---
+
+## 5.5.2 Review Workflow
+
+**Step 1 – Preparation**  
+- HR updates identity data in ULIS and Foederis.  
+- SailPoint compiles current access per user and role.  
+
+**Step 2 – Review Initiation**  
+- Department managers receive automated review campaigns.  
+- Each manager validates, modifies, or revokes user access.  
+
+**Step 3 – Validation**  
+- IAM Core Team verifies changes.  
+- Revocations and modifications are processed automatically.  
+
+**Step 4 – Audit and Reporting**  
+- Reports generated for compliance (GDPR, ISO 27001 A.9.2.5).  
+- Logs archived and validated by CISO.
+
+---
+
+## 5.5.3 Review Frequency and Scope
+
+| **Review Type** | **Frequency** | **Owner** | **Scope** |
+|------------------|---------------|------------|------------|
+| Access Review | Quarterly | Department Managers | All clinical systems |
+| Privileged Access Review | Monthly | IT Security | PAM accounts |
+| Role Certification | Annually | IAM Core Team | IGA roles and policies |
+
+---
+
+## 5.5.4 Tools and Reports
+- **Tool:** SailPoint Certification module  
+- **Output:** Audit trail (CSV/PDF)  
+- **Dashboard:** Compliance dashboard integrated with Power BI
 
