--- a/05_Analysis-and-Design/5.6_Technical_Interface_and_APIs.md
+++ b/05_Analysis-and-Design/5.6_Technical_Interface_and_APIs.md
@@ -1,1 +1,30 @@
+# 5.6 Technical Interfaces and APIs
+
+## 5.6.1 Objective
+To describe the technical interfaces, connectors, and APIs required for the integration between IAM components and hospital systems.
+
+---
+
+## 5.6.2 Interface Summary
+
+| **Source System** | **Target System** | **Protocol / API Type** | **Direction** | **Purpose** |
+|--------------------|-------------------|--------------------------|----------------|--------------|
+| ULIS / Foederis | SailPoint | REST / CSV feed | One-way | HR identity feed |
+| SailPoint | DXPlanning | SCIM / JDBC | Two-way | User provisioning & deprovisioning |
+| SailPoint | OASIS+ | SCIM | One-way | Account creation |
+| SailPoint | QBLOC | SCIM | One-way | Role provisioning |
+| Okta | OASIS+, QBLOC | SAML / OIDC | One-way | Authentication federation |
+| Okta | ePrescription (eID) | OIDC + eID API | Two-way | Authentication and signature binding |
+| Wallix | Application servers | SSH / RDP / HTTPS | One-way | Privileged session recording |
+| Wallix | SailPoint | REST API | Two-way | PAM account synchronization |
+
+---
+
+## 5.6.3 Compliance Alignment
+All interfaces comply with **ISO 27001 Annex A.13.2** (Information Transfer) and **NIS2** requirements for secure communication channels (TLS 1.2+, encrypted credentials vault).
+
+---
+
+## 5.6.4 Diagram (optional)
+Include a diagram visualizing the main interfaces between IAM components and hospital systems.
 
