--- a/05_Analysis-and-Design/5.4_Application_Inventory_and_Access_Matrix.md
+++ b/05_Analysis-and-Design/5.4_Application_Inventory_and_Access_Matrix.md
@@ -31,3 +31,6 @@ This section lists all applications included in the IAM perimeter, their critica
 | ePrescription | Pharmacist | Sign ePrescription | Okta (eID + MFA) | SailPoint |
 | Wallix | IT Admin | Privileged session | Native login (Vaulted) | PAM |
 
+
+> A complete Access matrix, 
+> is provided as a separate deliverable: [Access-Matrix.xlsx](../99_Support-documents/Access-Matrix.xlsx.xlsx) (click on "view raw")
