--- a/05_Analysis-and-Design/5.5_Access_Review_Process.md
+++ b/05_Analysis-and-Design/5.5_Access_Review_Process.md
@@ -23,6 +23,8 @@ To ensure that access rights remain aligned with job functions, CHR Brussels per
 - Reports generated for compliance (GDPR, ISO 27001 A.9.2.5).  
 - Logs archived and validated by CISO.
 
+
+![image_alt]
 ---
 
 ## 5.5.3 Review Frequency and Scope
