--- a/05_Analysis-and-Design/5.5_Access_Review_Process.md
+++ b/05_Analysis-and-Design/5.5_Access_Review_Process.md
@@ -24,7 +24,8 @@ To ensure that access rights remain aligned with job functions, CHR Brussels per
 - Logs archived and validated by CISO.
 
 
-![image_alt]
+![image_alt](https://github.com/Kristina-1991/IAM-Hospital-CaseStudy-SailPoint-Okta-Wallix/blob/9049bcfb1425e4b34a7195609b521550f4db56a5/99_Support-documents/Access-review-workflow.PNG?raw=true)
+
 ---
 
 ## 5.5.3 Review Frequency and Scope
