--- a/05_Analysis-and-Design/5.6_Technical_Interface_and_APIs.md
+++ b/05_Analysis-and-Design/5.6_Technical_Interface_and_APIs.md
@@ -25,6 +25,6 @@ All interfaces comply with **ISO 27001 Annex A.13.2** (Information Transfer) and
 
 ---
 
-## 5.6.4 Diagram (optional)
-Include a diagram visualizing the main interfaces between IAM components and hospital systems.
+## 5.6.4 Deliverables 
+
 
