--- a/05_Analysis-and-Design/5.6_Technical_Interface_and_APIs.md
+++ b/05_Analysis-and-Design/5.6_Technical_Interface_and_APIs.md
@@ -26,5 +26,9 @@ All interfaces comply with **ISO 27001 Annex A.13.2** (Information Transfer) and
 ---
 
 ## 5.6.4 Deliverables 
+### 5.6.4.1 IAM interface diagram & IAM API mapping
 
+![image_alt](https://github.com/Kristina-1991/IAM-Hospital-CaseStudy-SailPoint-Okta-Wallix/blob/c9c29b97f8ef4e5c3fd231201748ad4b921e7117/99_Support-documents/IAM-Interface-Diagram.PNG?raw=true)
+
+Link: [IAM API Mapping](../99_Support-documents/IAM-API-Mapping.xlsx)
 
